@@ -27,7 +27,6 @@ require.config(
       // local contrib dependencies
       easel: "../contrib/easeljs-0.6.0.min",
       i18n: "../contrib/i18n/i18n",
-      image: "../contrib/image-0.2.1",
       tpl: "../contrib/tpl-0.2",
       fastclick: "../contrib/fastclick-0.5.6"
     },
